<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_marginLeft="12pt"
        android:layout_marginRight="12pt"
        android:layout_marginTop="4pt">
        <EditText
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="6pt"
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/smallest_int">
        </EditText>
        <EditText
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_marginRight="6pt"
            android:inputType="numberDecimal"
            android:hint="@string/largest_int">
        </EditText>
        <EditText
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/amount">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="4pt"
        android:layout_marginLeft="6pt"
        android:layout_marginRight="6pt">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/send_numbers"
            android:id="@+id/send_button">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/displayResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:textSize="32dp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="4pt"
        android:layout_marginLeft="6pt"
        android:layout_marginRight="6pt">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/Instruction_Text"
            android:textSize="32dp">
        </TextView>
    </LinearLayout>
</LinearLayout>